# Proof-of-Location

./: .env.example  Cargo.toml  README.md  constants.ts  deploy.sh
apps/: Cargo.toml
apps/src/: lib.rs
bonsai-pay/cache/: solidity-files-cache.json
bonsai-pay/contracts/: ImageID.sol
bonsai-pay/tests/: Elf.sol
broadcast/Deploy.s.sol/202402021700/: run-1713537083.json  run-1713539385.json  run-1713561794.json  run-1713562075.json
broadcast/Deploy.s.sol/421614/: run-1713539366.json  run-1713561774.json  run-1713562056.json
contracts/: Verifier.sol
contracts/sources/: contracts.move
contracts/tests/: contracts_tests.move
groth16-verifier/: Cargo.toml
groth16-verifier/methods/: Cargo.toml
groth16-verifier/methods/guest/: Cargo.toml
groth16-verifier/src/: main.rs
hello-world/host/: Cargo.toml
hello-world/host/src/: main.rs
methods/guest/: Cargo.toml
script/: Deploy.s.sol
tlsn-test/: .env  Cargo.toml
tlsn-test/host/: .env  Cargo.toml
tlsn-test/host/src/: main.rs
tlsn-test/methods/guest/: Cargo.toml
tlsn-test/methods/guest/src/: main.rs
ui/: .gitignore  package-lock.json  package.json
ui/src/app/: layout.tsx  page.tsx
ui/src/components/ui/: GoogleMap.tsx  input.tsx
