[package]
name = "apps"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
bonsai-sdk = { workspace = true }
bytemuck = { workspace = true }
clap = { version = "4.0", features = ["derive", "env"] }
env_logger = { version = "0.10" }
ethers = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
methods = { workspace = true }
risc0-ethereum-contracts = { workspace = true }
risc0-zkvm = { workspace = true }
serde.workspace = true
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7.10"
tlsn-prover = { path = "../tlsn/tlsn/tlsn-prover"}
tlsn-examples = { path = "../tlsn/tlsn/examples"}
tlsn-core = { path = "../tlsn/tlsn/tlsn-core"}
hyper = "1.2.0"
http-body-util = "0.1.1"
serde_json = "1.0.115"
hyper-util = "0.1.3"
dotenv = "0.15.0"
tracing = "0.1.40"
elliptic-curve = "0.13.8"
p256 = "0.13.2"
chrono = "0.4.37"
color-eyre = "0.6.3"
httparse = "1.8.0"
http = "1.1.0"
axum = "0.7.5"
geolocation = "0.2.1"
reqwest = {version = "0.12.3", features = ["json"] }
tower-http = {version = "0.5.2", features = ["cors"] }
