[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "0.21.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
eyre = "0.6.12"
color-eyre = "0.6.3"
bonsai-sdk = "0.7.0"
hex = "0.4.3"
bytemuck = "1.15.0"
bincode = "1.3.3"
reqwest = "0.12.3"
