[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "0.21.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
tokio ={version = "1.37.0", features = ["full"]}
tokio-util = "0.7.10"

tlsn-prover = { path = "../tlsn/tlsn/tlsn-prover"}
tlsn-examples = { path = "../tlsn/tlsn/examples"}
tlsn-core = { path = "../tlsn/tlsn/tlsn-core"}
hyper = "1.2.0"
http-body-util = "0.1.1"
serde_json = "1.0.115"
hyper-util = "0.1.3"
dotenv = "0.15.0"
log = "0.4.21"
tracing = "0.1.40"
elliptic-curve = "0.13.8"
p256 = "0.13.2"
chrono = "0.4.37"
color-eyre = "0.6.3"
httparse = "1.8.0"
http = "1.1.0"

