[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
json = "0.12.4"
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "0.21.0", features = ["std"] }
serde_json = "1.0.115"
# tlsn-core = { path = "../../tlsn/tlsn/tlsn-core"}
